	  variable in cut.c instead of a flag, and unset it in other
	  files via the new function cutbuffer_reset(). (DLR)
	- Add the ability to change the characters used to display the
	  beginning characters of tabs and spaces via the rcfile entry
	  "whitespace".  This is disabled if nanorc support is disabled
	  or if we're in tiny mode. (Mike Frysinger; minor changes and
	  adaptations by DLR)
- files.c:
  add_open_file()
	- Rearrange the NANO_SMALL #ifdef so that the code to set the
	  MODIFIED flag in open_files->flags is included only once.
	  (DLR)
  write_marked()
	- Call write_file() with nonamechange set to TRUE so that we
	  don't erroneously change the current filename when writing a
	  selection, and don't take a nonamechange parameter anymore
	  since we don't use it. (DLR)
  do_writeout()
	- Refactor so that no recursion is needed if we try to exit with
	  a modified file that has no name when TEMP_OPT is set. (DLR)
  do_browser()
	- Call check_statblank() instead of blanking the statusbar
	  unconditionally, for consistency. (David Benbennick)
- move.c:
  do_first_line(), do_last_line()
	- Move these functions here from winio.c. (DLR)
- nano.c:
  finish()
	- Call blank_statusbar() and blank_bottombars() to blank out
	  the statusbar and shortcut list in bottomwin. (DLR)
	- Since all of the calls to finish() use 0 for the value of
	  sigage, and the return value of finish() is never used, make
	  it accept and return void. (David Benbennick)
  die_save_file()
	- Call write_file() with nonamechange set to TRUE since we don't
	  need to change the current filename if we're writing emergency
	  backup files. (DLR)
  do_early_abort()
	- Removed, as it's no longer called anywhere. (David Benbennick)
  open_pipe()
	- Call enable_signals() at the beginning and disable_signals()
	  at the end, so that we get a SIGINT when Ctrl-C is pressed
	  during wait() and can then call cancel_fork() properly. (DLR)
  do_delete(), do_enter()